--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Test</title>
+    <title>Business Card</title>
 </head>
 
 <body>
@@ -19,5 +19,6 @@
         </div>
     </div>
 </body>
+
 
 </html>
