--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <div class="card">
-        <img class="img-avatar border-blue" src="download.png"
+        <img class="img-avatar" src="download.png"
             alt="Amir Bahmanzadegan in white shirt holding bottle of water and lean to the wall.">
-        <div class="border-blue">
+        <div>
             <h3>Amir Bahmanzadegan</h3>
             <p>Front-End Developer</p>
             <h4>BND , Iran</h4>
@@ -22,3 +22,4 @@
 
 
 </html>
+
